[gd_scene load_steps=6 format=3 uid="uid://bev4wimedk8q"]

[ext_resource type="Script" path="res://scenes/enemies/base_enemy.gd" id="1_vvqcf"]
[ext_resource type="PackedScene" uid="uid://bn3b3t3pwf5vw" path="res://scenes/collidable_object/collidable_object.tscn" id="2_7tfwu"]

[sub_resource type="Animation" id="Animation_u4rhv"]
resource_name = "flicker"
length = 0.5
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.15, 0.25, 0.3, 0.35, 0.4, 0.45, 0.48, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_6idu0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jgij4"]
_data = {
"RESET": SubResource("Animation_6idu0"),
"flicker": SubResource("Animation_u4rhv")
}

[node name="BaseEnemy" type="PathFollow2D"]
script = ExtResource("1_vvqcf")

[node name="CollidableObject" parent="." instance=ExtResource("2_7tfwu")]
collision_layer = 2
collision_mask = 5

[node name="Sprite" type="AnimatedSprite2D" parent="."]

[node name="OutOfTime" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jgij4")
}

[connection signal="timeout" from="OutOfTime" to="." method="_on_out_of_time_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
